--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* style.css */
 body {
     display: flex;
     justify-content: center;
@@ -18,11 +17,52 @@ body {
     flex-wrap: wrap;
 }
 
-.placeholder {
+.face {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.eye, .mouth {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 1px solid transparent; /* Invisible, but helps visualize drop targets during development */
+    margin: 5px;
+    position: absolute;
+    border: 1px solid #333; /* Slightly visible to guide users */
+}
+
+#left-eye {
+    left: 30%;
+}
+
+#right-eye {
+    right: 30%;
+}
+
+.mouth {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 20%;
+}
+
+.mouth .placeholder {
+    width: 30px; /* Smaller stones for the mouth */
+    height: 30px;
+    border-radius: 50%;
+}
+
+.stones {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .stone {
@@ -34,6 +74,11 @@ body {
     cursor: grab;
 }
 
-.stone:active {
+.stone:active, .dragging {
     cursor: grabbing;
+    opacity: 0.8;
+}
+
+.placeholder.hovered {
+    border: 1px solid blue; /* Highlight placeholders when a stone is hovered over them */
 }
